Try new release workflow

--- a/.github/workflows/GooglePlay-Deployment.yaml
+++ b/.github/workflows/GooglePlay-Deployment.yaml
@@ -1,8 +1,10 @@
 name: Tagged Release
 on:
   push:
+    branches:
+      - Pre-Release
     tags:
-      - "v*"
+      - v1.*
 
 jobs:
   tagged-release:
