--- a/.github/workflows/GooglePlay-Deployment.yaml
+++ b/.github/workflows/GooglePlay-Deployment.yaml
@@ -23,7 +23,7 @@ jobs:
 
   app_distribution_android:
     runs-on: ubuntu-latest
-    needs: generate_release
+    needs: tagged_release
     defaults:
       run:
         working-directory: ./android
