--- a/.github/workflows/GooglePlay-Deployment.yaml
+++ b/.github/workflows/GooglePlay-Deployment.yaml
@@ -11,14 +11,12 @@ jobs:
     name: Tagged Release
     runs-on: ubuntu-latest
 
-    steps:
-      - name: Build & Test
-        run: |
-          echo "done!"
       - uses: marvinpinto/action-automatic-release@latest
         with:
           repo_token: ${{ secrets.G_TOKEN }}
+          automatic_release_tag: latest
           prerelease: false
+          title: New release
 
 
   app_distribution_android:
