--- a/.github/workflows/GooglePlay-Deployment.yaml
+++ b/.github/workflows/GooglePlay-Deployment.yaml
@@ -11,7 +11,12 @@ jobs:
     name: Tagged Release
     runs-on: ubuntu-latest
 
-      - uses: marvinpinto/action-automatic-release@latest
+    steps:
+      - name: Build & test
+        - run: |
+            echo "done"
+
+      - uses: marvinpinto/action-automatic-releases@latest
         with:
           repo_token: ${{ secrets.G_TOKEN }}
           automatic_release_tag: latest
