--- a/.github/workflows/GooglePlay-Deployment.yaml
+++ b/.github/workflows/GooglePlay-Deployment.yaml
@@ -1,32 +1,35 @@
-name: tagged-release
+name: Create Release
 on:
   push:
-    branches:
-      - Pre-Release
     tags:
-      - v1.*
+      - 'v*'
 
 jobs:
-  tagged-release:
-    name: Tagged Release
+  build:
+    name: Create Release
     runs-on: ubuntu-latest
-
     steps:
-      - name: Build & test
-        - run: |
-            echo "done"
-
-      - uses: marvinpinto/action-automatic-releases@latest
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.G_TOKEN }}
         with:
-          repo_token: ${{ secrets.G_TOKEN }}
-          automatic_release_tag: latest
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: |
+            Changes in this Release
+            - First change
+            - Test Change
+          draft: false
           prerelease: false
-          title: New release
 
 
   app_distribution_android:
     runs-on: ubuntu-latest
-    needs: tagged-release
+    needs: Create Release
     defaults:
       run:
         working-directory: ./android
