--- a/.github/workflows/GooglePlay-Deployment.yaml
+++ b/.github/workflows/GooglePlay-Deployment.yaml
@@ -1,35 +1,27 @@
-name: Create Release
+name: Publish Release
 on:
   push:
     tags:
-      - 'v*'
+      -'v*'
 
 jobs:
   build:
-    name: Create Release
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+      - uses: actions/checkout@v3
+      - name: Create a release
+        uses: elgohr/Github-Release-Action@v4
         env:
-          GITHUB_TOKEN: ${{ secrets.G_TOKEN }}
+          GITHUB_TOKEN:  ${{ secrets.G_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            Changes in this Release
-            - First change
-            - Test Change
-          draft: false
-          prerelease: false
+          title: Release Message
+
+
 
 
   app_distribution_android:
     runs-on: ubuntu-latest
-    needs: Create Release
+    needs: Publish Release
     defaults:
       run:
         working-directory: ./android
