--- a/.github/workflows/GooglePlay-Deployment.yaml
+++ b/.github/workflows/GooglePlay-Deployment.yaml
@@ -16,61 +16,58 @@ jobs:
         with:
           title: Release Message
 
-
-
-
-  app_distribution_android:
-    runs-on: ubuntu-latest
-    needs: Publish Release
-    defaults:
-      run:
-        working-directory: ./android
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Set up JDK
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: 11
-
-      - name: Setup Android SDK
-        uses: android-actions/setup-android@v2
-      - name: Install Flutter
-        uses: subosito/flutter-action@v2.3.0
-        with:
-          flutter-version: "3.3.1"
-      #      - name: Fix up git URLs
-      #         run: echo -e '[url "https://github.com/"]\n  insteadOf = "git://github.com"' >> ~/.gitconfig
-      - uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: 2.6
-          bundler-cache: true
-      - uses: actions/setup-dotnet@v2
-        with:
-          dotnet-version: "3.1.420"
-      - name: Install GitVersion
-        uses: gittools/actions/gitversion/setup@v0.9.13
-        with:
-          versionSpec: "5.10.0"
-      - name: Determine Version
-        id: gitversion
-        uses: gittools/actions/gitversion/execute@v0.9.13
-      - run: bundle install
-      - name: Configure Keystore
-        run: |
-          echo "$PLAY_STORE_UPLOAD_KEY" | base64 --decode > app/upload-keystore.jks
-          echo "storeFile=upload-keystore.jks" >> key.properties
-          echo "keyAlias=$ANDROID_KEYSTORE_ALIAS" >> key.properties
-          echo "storePassword=$ANDROID_KEYSTORE_PASSWORD" >> key.properties
-          echo "keyPassword=$ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD" >> key.properties
-        env:
-          PLAY_STORE_UPLOAD_KEY: ${{ secrets.PLAY_STORE_UPLOAD_KEY }}
-          ANDROID_KEYSTORE_ALIAS: ${{ secrets.ANDROID_KEYSTORE_ALIAS }}
-          ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD }}
-          ANDROID_KEYSTORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
-      - run: bundle exec fastlane deploy
-        env:
-          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-          RELEASE_NOTES: ${{ needs.generate_release.outputs.changelog }}
+#  app_distribution_android:
+#    runs-on: ubuntu-latest
+#    needs: Publish Release
+#    defaults:
+#      run:
+#        working-directory: ./android
+#    steps:
+#      - uses: actions/checkout@v2
+#        with:
+#          fetch-depth: 0
+#      - name: Set up JDK
+#        uses: actions/setup-java@v3
+#        with:
+#          distribution: 'temurin'
+#          java-version: 11
+#
+#      - name: Setup Android SDK
+#        uses: android-actions/setup-android@v2
+#      - name: Install Flutter
+#        uses: subosito/flutter-action@v2.3.0
+#        with:
+#          flutter-version: "3.3.1"
+#      #      - name: Fix up git URLs
+#      #         run: echo -e '[url "https://github.com/"]\n  insteadOf = "git://github.com"' >> ~/.gitconfig
+#      - uses: ruby/setup-ruby@v1
+#        with:
+#          ruby-version: 2.6
+#          bundler-cache: true
+#      - uses: actions/setup-dotnet@v2
+#        with:
+#          dotnet-version: "3.1.420"
+#      - name: Install GitVersion
+#        uses: gittools/actions/gitversion/setup@v0.9.13
+#        with:
+#          versionSpec: "5.10.0"
+#      - name: Determine Version
+#        id: gitversion
+#        uses: gittools/actions/gitversion/execute@v0.9.13
+#      - run: bundle install
+#      - name: Configure Keystore
+#        run: |
+#          echo "$PLAY_STORE_UPLOAD_KEY" | base64 --decode > app/upload-keystore.jks
+#          echo "storeFile=upload-keystore.jks" >> key.properties
+#          echo "keyAlias=$ANDROID_KEYSTORE_ALIAS" >> key.properties
+#          echo "storePassword=$ANDROID_KEYSTORE_PASSWORD" >> key.properties
+#          echo "keyPassword=$ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD" >> key.properties
+#        env:
+#          PLAY_STORE_UPLOAD_KEY: ${{ secrets.PLAY_STORE_UPLOAD_KEY }}
+#          ANDROID_KEYSTORE_ALIAS: ${{ secrets.ANDROID_KEYSTORE_ALIAS }}
+#          ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PRIVATE_KEY_PASSWORD }}
+#          ANDROID_KEYSTORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+#      - run: bundle exec fastlane deploy
+#        env:
+#          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+#          RELEASE_NOTES: ${{ needs.generate_release.outputs.changelog }}
