--- a/.github/workflows/GooglePlay-Deployment.yaml
+++ b/.github/workflows/GooglePlay-Deployment.yaml
@@ -28,7 +28,7 @@ jobs:
 
   app_distribution_android:
     runs-on: ubuntu-latest
-    needs: generate-release
+    needs: generate_release
     defaults:
       run:
         working-directory: ./android
