Update deployment file

--- a/.github/workflows/GooglePlay-Deployment.yaml
+++ b/.github/workflows/GooglePlay-Deployment.yaml
@@ -1,8 +1,7 @@
 name: Deploy to Google
 on:
-  push:
-   tags:
-      - 'v1.1.2'
+  release:
+   types: [published, created, edited]
 
 jobs:
   generate_release:
