--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: "marvinpinto/action-automatic-release@latest"
         with:
-          repo_token: ${{ secrets.G_TOKEN }}
+          repo_token: "${{ secrets.G_TOKEN }}"
           prerelease: false
 
 
