--- a/android/local.properties
+++ b/android/local.properties
@@ -1,7 +1,8 @@
 sdk.dir=/Users/hirasalim/Library/Android/sdk
 flutter.sdk=/Users/hirasalim/Tools/flutter
-flutter.versionName=1.0.3
+flutter.versionName=1.0.2
 flutter.minSdkVersion=21
 flutter.targetSdkVersion=32
 flutter.compileSdkVersion=32
 flutter.buildMode=release
+flutter.versionCode=1
