--- a/.github/workflows/GooglePlay-Deployment.yaml
+++ b/.github/workflows/GooglePlay-Deployment.yaml
@@ -1,7 +1,12 @@
 name: Deploy to Google
 on:
-  release:
-    types: [published, created, edited]
+  push:
+    branches:
+      - Seventh_Job
+
+
+  #release:
+   # types: [published, created, edited]
 
 
 jobs:
@@ -19,7 +24,7 @@ jobs:
         with:
           configuration: ".github/configs/configuration.json"
           repo: "startup"
-          fromTag: "v1.0.2"
+          fromTag: "v1.1.1"
           toTag: "main"
           includeOpen: false
         env:
