update version code in pubspec

--- a/.github/workflows/GooglePlay-Deployment.yaml
+++ b/.github/workflows/GooglePlay-Deployment.yaml
@@ -1,12 +1,12 @@
 name: Deploy to Google
 on:
-  push:
-    branches:
-      - Seventh_Job
+#  push:
+#    branches:
+#      - Seventh_Job
 
 
-  #release:
-   # types: [published, created, edited]
+  release:
+   types: [created]
 
 
 jobs:
