--- a/.github/workflows/firebase-app-distribution.yaml
+++ b/.github/workflows/firebase-app-distribution.yaml
@@ -2,7 +2,7 @@ name: Publish to firebase app distribution
 on:
   push:
     branches:
-      - December
+      - Release_Test
 
 jobs:
   generate_release:
